<resources>
    <string name="app_name">ASU Eats</string>
    <string name="img_dscrp">App Logo</string>
    <string name="email">Email</string>
    <string name="hint_email">Enter your email</string>
    <string name="password">Password</string>
    <string name="hint_pass">Enter your password</string>
    <string name="confirm">Confirm password</string>
    <string name="hint_confirm">Re-enter your password</string>
    <string name="login">Login</string>
    <string name="stay_in">Stay Logged In</string>
    <string name="signup_link"><u>Sign Up</u></string>
    <string name="signup">Sign Up</string>
    <string name="dish_name">dish name</string>
    <string name="description">descriptiondescriptiondescriptiondescriptiondescriptiondescriptiondescriptiondescriptiondescriptiondescription</string>
    <string name="price_base">PRICE L.E.</string>
    <string name="proceed_payment">Proceed to Payment</string>
    <string name="availability">Availabililty: 4</string>
    <string name="minus_sign">–</string>
    <string name="plus_sign">+</string>
    <string name="number_placeholder">0</string>
    <string name="cart_add">Add to Cart</string>
    <string name="logo">logo</string>
    <string name="tracking_img">tracking image</string>
    <string name="order_placed">Order placed</string>
    <string name="in_package">  In Package</string>
    <string name="on_way">On the Way</string>
    <string name="being_served">Being Served</string>
    <string name="order_details_title">Order Details</string>
    <string name="order_details">orderdetails_orderdetails_orderdetails_orderdetails_orderdetails_orderdetails_orderdetails_orderdetails_orderdetails_orderdetails_orderdetails_orderdetails_orderdetails_orderdetails_orderdetails_orderdetails_orderdetails_orderdetails_orderdetails_orderdetails_</string>
    <string name="total_cost">Total Cost</string>
    <string name="cost_tag">$COST</string>
    <string name="place_order">place order</string>
    <string name="personal_info">Personal Information</string>
    <string name="first_name">First name</string>
    <string name="first_name_hint">Your first name</string>
    <string name="last_name">Last name</string>
    <string name="last_name_hint">Your last name</string>
    <string name="cart_btn">Cart</string>
    <string name="account_btn">Account</string>
    <string name="shop_img">shop image</string>
    <string name="restaurant_name">Restaurant Name</string>
    <string name="price_range">cousine, price range</string>
    <string name="show_menu">Show Menu</string>
    <string name="address">Address</string>
    <string name="address_hint">Your address</string>
    <string name="updateprofile">Update Profile</string>
    <string name="test_email">admin@admin.com</string>
    <string name="test_password">admin_admin</string>
    <string name="logout">Logout</string>
    <string name="empty"> </string>
    <string name="menu">Menu</string>

</resources>
