<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/my_beige"
    >

    <TextView
        android:id="@+id/pav_orderdetail_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:text="@string/order_details_title"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/pav_orderdescription_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:maxEms="22"
        android:text="@string/order_details"
        app:layout_constraintStart_toStartOf="@+id/pav_orderdetail_tv"
        app:layout_constraintTop_toBottomOf="@+id/pav_orderdetail_tv" />

    <TextView
        android:id="@+id/pav_totalcost_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/total_cost"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/pav_orderdescription_tv"
        app:layout_constraintTop_toBottomOf="@+id/pav_orderdescription_tv" />

    <TextView
        android:id="@+id/pav_costvalue_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/cost_tag"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/pav_totalcost_tv"
        app:layout_constraintTop_toBottomOf="@+id/pav_totalcost_tv" />

    <Button
        android:id="@+id/pav_placeorder_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginEnd="80dp"
        android:layout_marginTop="64dp"
        android:text="@string/place_order"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pav_costvalue_tv"
        android:background="@drawable/mybutton_style"
        />
</androidx.constraintlayout.widget.ConstraintLayout>