<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_page"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="15dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="100dp"
        >


        <ImageView

            android:id="@+id/otv_track_img"
            android:layout_width="match_parent"
            android:layout_weight="15"
            android:layout_height="0dp"
            app:srcCompat="@drawable/track_transparent"
            android:contentDescription="@string/tracking_img" />

        <TextView
            android:layout_marginTop="5dp"
            android:id="@+id/otv_orderplaced_tv"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:textColor="@color/green"
            android:layout_weight="10"
            android:padding="10dp"
            android:textSize="40sp"
            android:text="@string/order_placed" />

        <TextView
            android:id="@+id/otv_inpackage_tv"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="10"

            android:textColor="@color/text_color"
            android:text="@string/in_package"
            android:padding="10dp"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/otv_onway_tv"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="10"
            android:paddingStart="2dp"
            android:text="@string/on_way"
            android:textColor="@color/text_color"
            android:padding="10dp"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/otv_beingserved_tv"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="10"
            android:padding="10dp"
            android:textSize="40sp"
            android:textColor="@color/text_color"
            android:text="@string/being_served" />

    </LinearLayout>






</androidx.constraintlayout.widget.ConstraintLayout>