<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="158dp"
    android:paddingTop="8dp"

    >

    <ImageView
        android:id="@+id/rri_rest_img"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="#111222"
        android:scaleType="fitXY"
        android:src="@drawable/restaurant_base_pic"
        android:contentDescription="@string/shop_img" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="2">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="75">


            <TextView
                android:id="@+id/rri_rstrntname_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/restaurant_name"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/rri_pricerange_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price_range"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@+id/rri_rstrntname_tv"
                app:layout_constraintTop_toBottomOf="@+id/rri_rstrntname_tv" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/rri_showmenu_tv"
            android:layout_width="wrap_content"
            android:layout_weight="25"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/show_menu"
            android:textSize="20sp"
            />

    </LinearLayout>


</LinearLayout>