<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/my_beige"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="128dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="55dp"
        android:layout_marginEnd="32dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView

            android:id="@+id/sv_logo_img"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="30"
            android:contentDescription="@string/logo"
            app:srcCompat="@drawable/logo" />

        <ImageView

            android:id="@+id/sv_app_title"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="75"
            android:contentDescription="@string/logo"
            app:srcCompat="@drawable/word_logo" />
    </LinearLayout>

    <Button
        android:id="@+id/sv_signup_btn"
        android:layout_width="128dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="54dp"
        android:background="@drawable/mybutton_style"
        android:text="@string/signup"
        android:textColor="#DDDADA"
        app:layout_constraintEnd_toEndOf="@+id/sv_pass_et"
        app:layout_constraintStart_toStartOf="@+id/sv_pass_et"
        app:layout_constraintTop_toBottomOf="@+id/sv_confirmpass_et" />

    <TextView

        android:id="@+id/sv_email_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="25dp"
        android:text="@string/email"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/linearLayout"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <EditText
        android:id="@+id/sv_email_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/edittext_style"
        android:ems="10"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:textColorHint="#78909C"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout"
        app:layout_constraintStart_toStartOf="@+id/sv_email_tv"
        app:layout_constraintTop_toBottomOf="@+id/sv_email_tv"
        android:autofillHints="" />

    <TextView
        android:id="@+id/sv_pass_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/password"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/sv_email_tv"
        app:layout_constraintTop_toBottomOf="@+id/sv_email_et" />

    <EditText
        android:id="@+id/sv_pass_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:autofillHints=""
        android:background="@drawable/edittext_style"
        android:ems="10"
        android:hint="@string/hint_pass"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:textColorHint="#78909C"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/sv_email_et"
        app:layout_constraintStart_toStartOf="@+id/sv_pass_tv"
        app:layout_constraintTop_toBottomOf="@+id/sv_pass_tv" />

    <TextView
        android:id="@+id/sv_confirmpass_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/confirm"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/sv_pass_tv"
        app:layout_constraintTop_toBottomOf="@+id/sv_pass_et" />

    <EditText
        android:id="@+id/sv_confirmpass_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/edittext_style"
        android:ems="10"
        android:hint="@string/hint_confirm"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:textColorHint="#78909C"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/sv_email_et"
        app:layout_constraintStart_toStartOf="@+id/sv_pass_tv"
        app:layout_constraintTop_toBottomOf="@+id/sv_confirmpass_tv"
        android:autofillHints="" />


</androidx.constraintlayout.widget.ConstraintLayout>