<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/my_beige"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="128dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="64dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="32dp"
        >

        <ImageView

            android:id="@+id/logo_img"
            android:layout_width="0dp"
            android:layout_weight="30"
            android:layout_height="match_parent"
            app:srcCompat="@drawable/logo"
            android:contentDescription="TODO" />

        <ImageView

            android:id="@+id/app_title"
            android:layout_width="0dp"
            android:layout_weight="75"
            android:layout_height="match_parent"
            app:srcCompat="@drawable/word_logo"
            android:contentDescription="TODO" />
    </LinearLayout>

    <Button
        android:id="@+id/signup_btn"
        android:layout_width="128dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="75dp"
        android:background="@drawable/mybutton"
        android:text="@string/login"
        android:textColor="#DDDADA"
        app:layout_constraintEnd_toEndOf="@+id/edittext_password"
        app:layout_constraintStart_toStartOf="@+id/edittext_password"
        app:layout_constraintTop_toBottomOf="@+id/checkBox_stay_in" />

    <TextView

        android:id="@+id/text_view_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:text="@string/email"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/linearLayout"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <EditText
        android:id="@+id/edittext_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/edittext_style"
        android:ems="10"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:paddingLeft="8dp"
        android:textColorHint="#78909C"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout"
        app:layout_constraintStart_toStartOf="@+id/text_view_email"
        app:layout_constraintTop_toBottomOf="@+id/text_view_email" />

    <TextView
        android:id="@+id/textview_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/password"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/text_view_email"
        app:layout_constraintTop_toBottomOf="@+id/edittext_email" />

    <EditText
        android:id="@+id/edittext_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:autofillHints=""
        android:background="@drawable/edittext_style"
        android:ems="10"
        android:hint="@string/hint_pass"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:paddingLeft="8dp"
        android:textColorHint="#78909C"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/edittext_email"
        app:layout_constraintStart_toStartOf="@+id/textview_password"
        app:layout_constraintTop_toBottomOf="@+id/textview_password" />

    <CheckBox
        android:id="@+id/checkBox_stay_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stay_in"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="@+id/edittext_password"
        app:layout_constraintTop_toBottomOf="@+id/edittext_password" />

    <TextView
        android:id="@+id/textview_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/signup_link"
        android:textColor="@color/btn"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/checkBox_stay_in"
        app:layout_constraintEnd_toEndOf="@+id/edittext_password"

        app:layout_constraintTop_toBottomOf="@+id/edittext_password" />


</androidx.constraintlayout.widget.ConstraintLayout>