<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="158dp"
    android:paddingTop="8dp"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="2">


        <TextView
            android:id="@+id/cri_dishname_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="8dp"
            android:maxEms="7"
            android:text="@string/dish_name"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/cri_description_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:maxEms="14"
            android:text="@string/description"
            app:layout_constraintStart_toStartOf="@+id/cri_dishname_tv"
            app:layout_constraintTop_toBottomOf="@+id/cri_dishname_tv" />

        <TextView
            android:id="@+id/cri_price_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:maxEms="7"
            android:text="@string/price_base"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/cri_description_tv"
            app:layout_constraintTop_toBottomOf="@+id/cri_description_tv" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="#111222"
        android:scaleType="fitXY"
        android:src="@drawable/dish_base_pic"
        android:contentDescription="@string/description"/>




</LinearLayout>